src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_skip_tests.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test --skip=tests
---
[Test] test::Tidy
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/tidy})
[Test] test::Coverage
    targets: [aarch64-unknown-linux-gnu]
    - Set({test::coverage-map})
    - Set({test::coverage-run})
[Test] test::CodegenCranelift
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::compiler/redox_codegen_cranelift})
[Test] test::CodegenGCC
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::compiler/redox_codegen_gcc})
[Test] test::Crate
    targets: [aarch64-unknown-linux-gnu]
    - Set({test::library/alloc})
    - Set({test::library/alloctests})
    - Set({test::library/compiler-builtins/compiler-builtins})
    - Set({test::library/core})
    - Set({test::library/coretests})
    - Set({test::library/panic_abort})
    - Set({test::library/panic_unwind})
    - Set({test::library/proc_macro})
    - Set({test::library/rustc-std-workspace-core})
    - Set({test::library/std})
    - Set({test::library/std_detect})
    - Set({test::library/sysroot})
    - Set({test::library/test})
    - Set({test::library/unwind})
[Test] test::CrateLibrustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::compiler})
    - Set({test::compiler/redox})
    - Set({test::compiler/redox_abi})
    - Set({test::compiler/redox_arena})
    - Set({test::compiler/redox_ast})
    - Set({test::compiler/redox_ast_ir})
    - Set({test::compiler/redox_ast_lowering})
    - Set({test::compiler/redox_ast_passes})
    - Set({test::compiler/redox_ast_pretty})
    - Set({test::compiler/redox_attr_parsing})
    - Set({test::compiler/redox_baked_icu_data})
    - Set({test::compiler/redox_borrowck})
    - Set({test::compiler/redox_builtin_macros})
    - Set({test::compiler/redox_codegen_llvm})
    - Set({test::compiler/redox_codegen_ssa})
    - Set({test::compiler/redox_const_eval})
    - Set({test::compiler/redox_data_structures})
    - Set({test::compiler/redox_driver})
    - Set({test::compiler/redox_driver_impl})
    - Set({test::compiler/redox_error_codes})
    - Set({test::compiler/redox_error_messages})
    - Set({test::compiler/redox_errors})
    - Set({test::compiler/redox_expand})
    - Set({test::compiler/redox_feature})
    - Set({test::compiler/redox_fs_util})
    - Set({test::compiler/redox_graphviz})
    - Set({test::compiler/redox_hashes})
    - Set({test::compiler/redox_hir})
    - Set({test::compiler/redox_hir_analysis})
    - Set({test::compiler/redox_hir_id})
    - Set({test::compiler/redox_hir_pretty})
    - Set({test::compiler/redox_hir_typeck})
    - Set({test::compiler/redox_incremental})
    - Set({test::compiler/redox_index})
    - Set({test::compiler/redox_index_macros})
    - Set({test::compiler/redox_infer})
    - Set({test::compiler/redox_interface})
    - Set({test::compiler/redox_lexer})
    - Set({test::compiler/redox_lint})
    - Set({test::compiler/redox_lint_defs})
    - Set({test::compiler/redox_llvm})
    - Set({test::compiler/redox_log})
    - Set({test::compiler/redox_macros})
    - Set({test::compiler/redox_metadata})
    - Set({test::compiler/redox_middle})
    - Set({test::compiler/redox_mir_build})
    - Set({test::compiler/redox_mir_dataflow})
    - Set({test::compiler/redox_mir_transform})
    - Set({test::compiler/redox_monomorphize})
    - Set({test::compiler/redox_next_trait_solver})
    - Set({test::compiler/redox_parse})
    - Set({test::compiler/redox_parse_format})
    - Set({test::compiler/redox_passes})
    - Set({test::compiler/redox_pattern_analysis})
    - Set({test::compiler/redox_privacy})
    - Set({test::compiler/redox_proc_macro})
    - Set({test::compiler/redox_public})
    - Set({test::compiler/redox_public_bridge})
    - Set({test::compiler/redox_query_impl})
    - Set({test::compiler/redox_resolve})
    - Set({test::compiler/redox_sanitizers})
    - Set({test::compiler/redox_serialize})
    - Set({test::compiler/redox_session})
    - Set({test::compiler/redox_span})
    - Set({test::compiler/redox_symbol_mangling})
    - Set({test::compiler/redox_target})
    - Set({test::compiler/redox_thread_pool})
    - Set({test::compiler/redox_trait_selection})
    - Set({test::compiler/redox_traits})
    - Set({test::compiler/redox_transmute})
    - Set({test::compiler/redox_ty_utils})
    - Set({test::compiler/redox_type_ir})
    - Set({test::compiler/redox_type_ir_macros})
    - Set({test::compiler/redox_windows_rc})
[Test] test::CrateRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/librustdoc})
    - Set({test::src/tools/rustdoc})
[Test] test::CrateRustdocJsonTypes
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/rustdoc-json-types})
[Test] test::CrateBootstrap
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/coverage-dump})
    - Set({test::src/tools/jsondoclint})
    - Set({test::src/tools/replace-version-placeholder})
    - Set({test::tidyselftest})
[Test] test::RemoteTestClientTests
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/remote-test-client})
[Test] test::Linkcheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/linkchecker})
[Test] test::TierCheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/tier-check})
[Test] test::RustAnalyzer
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/rust-analyzer})
[Test] test::ErrorIndex
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::error-index})
    - Set({test::src/tools/error_index_generator})
[Test] test::RustdocBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/doc/rustdoc})
[Test] test::UnstableBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/doc/unstable-book})
[Test] test::RustcBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/doc/rustc})
[Test] test::RustdocTheme
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/rustdoc-themes})
[Test] test::HtmlCheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/html-checker})
[Test] test::RustInstaller
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/rust-installer})
[Test] test::TestFloatParse
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/test-float-parse})
